refactor(backend/auth-register): change register endpoint path
